Update email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ Contributors include:
 
 Sébastien MARTIN <semartin@softbankrobotics.com>
 Romain TAPREST <rtaprest@softbankrobotics.com>
-Antoine MARTIN <amartin@softbankrobotics.com>
+Antoine MARTIN <antoine.martin222@gmail.com>
